[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/HUD/minimapPointer.png" type="Texture" id=1]
[ext_resource path="res://scenes/HUD/minimapFrameFilled.png" type="Texture" id=2]
[ext_resource path="res://scenes/HUD/minimap.gd" type="Script" id=3]
[ext_resource path="res://scenes/HUD/minimapIcon.png" type="Texture" id=4]

[node name="minimap" type="NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MapUpdateTimer" type="Timer" parent="."]
wait_time = 0.078
autostart = true

[node name="PlayerIcon" type="Sprite" parent="."]
position = Vector2( 65, 62 )
texture = ExtResource( 1 )

[node name="ThreatIcon" type="Sprite" parent="."]
visible = false
position = Vector2( 65, 62 )
scale = Vector2( 0.339027, 0.339027 )
texture = ExtResource( 4 )

[connection signal="timeout" from="MapUpdateTimer" to="." method="_on_MapUpdateTimer_timeout"]
